terraform/endpoint.tf
resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.${var.AWS_REGION}.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = [aws_route_table.public.id]

  tags = {
    Name = "locals-s3"
  }
}

resource "aws_vpc_endpoint" "ecr_dkr" {
  vpc_id              = aws_vpc.vpc.id
  service_name        = "com.amazonaws.${var.AWS_REGION}.ecr.dkr"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.endpoint.id
  ]
  subnet_ids = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
  ]

  tags = {
    Name = "locals-ecr-dkr"
  }
}

resource "aws_vpc_endpoint" "ecr_api" {
  vpc_id              = aws_vpc.vpc.id
  service_name        = "com.amazonaws.${var.AWS_REGION}.ecr.api"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.endpoint.id
  ]
  subnet_ids = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
  ]

  tags = {
    Name = "locals-ecr-api"
  }
}

resource "aws_vpc_endpoint" "log" {
  vpc_id              = aws_vpc.vpc.id
  service_name        = "com.amazonaws.${var.AWS_REGION}.logs"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  security_group_ids = [
    aws_security_group.endpoint.id
  ]
  subnet_ids = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
  ]

  tags = {
    Name = "locals-logs"
  }
}

resource "aws_vpc_endpoint" "ssm" {
  vpc_id              = aws_vpc.vpc.id
  service_name        = "com.amazonaws.${var.AWS_REGION}.ssm"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  subnet_ids = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
  ]
  security_group_ids = [
    aws_security_group.endpoint.id
  ]
}
